[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Places/Main.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/GUI/pole.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/GUI/plank.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/cap20.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Scenes/Barn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Dumpster.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Town.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Arena.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/Fonts/fall18.fnt" type="BitmapFont" id=10]
[ext_resource path="res://Scenes/Farmer.tscn" type="PackedScene" id=11]

[node name="GameMenu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FarmBackground" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="Control" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 449.0
margin/top = 8.0
margin/right = 535.0
margin/bottom = 552.0

[node name="Pole" type="Sprite" parent="Buttons"]

transform/pos = Vector2( 47, 263 )
texture = ExtResource( 3 )

[node name="ToBreed" type="TextureButton" parent="Buttons"]

editor/display_folded = true
rect/rotation = -174.528
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 87.0
margin/top = 55.0
margin/right = 201.4
margin/bottom = 93.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/ToBreed"]

rect/rotation = -178.925
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 105.0
margin/top = 35.0
margin/right = 215.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 5 )
text = "Barn"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ToSell" type="TextureButton" parent="Buttons"]

editor/display_folded = true
rect/rotation = -8.96748
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 15.0
margin/top = 82.0
margin/right = 129.4
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/ToSell"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 110.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 5 )
text = "Dump"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ToTown" type="TextureButton" parent="Buttons"]

editor/display_folded = true
rect/rotation = -1.97329
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = -3.0
margin/top = 153.0
margin/right = 111.4
margin/bottom = 191.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/ToTown"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 110.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 5 )
text = "Town"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ToArena" type="TextureButton" parent="Buttons"]

editor/display_folded = true
rect/rotation = 15.2536
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 2.0
margin/top = 237.0
margin/right = 116.4
margin/bottom = 275.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="Buttons/ToArena"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -7.0
margin/top = 3.0
margin/right = 103.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 5 )
text = "Arena"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="ToSleep" type="TextureButton" parent="Buttons"]

editor/display_folded = true
rect/rotation = 164.623
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 79.0
margin/top = 363.0
margin/right = 193.4
margin/bottom = 401.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/ToSleep"]

rect/rotation = 177.22
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 105.0
margin/top = 38.0
margin/right = 215.0
margin/bottom = 73.0
custom_fonts/font = ExtResource( 5 )
text = "Home"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="Buttons"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Barn" parent="." instance=ExtResource( 6 )]

editor/display_folded = true

[node name="Collect1" parent="Barn/Display1"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Feed1" parent="Barn/Display1"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Collect2" parent="Barn/Display2"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Feed2" parent="Barn/Display2"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="StorageBackground1" parent="Barn/Storage1"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Storage2" parent="Barn"]

editor/display_folded = false

[node name="StorageBackground2" parent="Barn/Storage2"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Breed" parent="Barn"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="SortSpecies" parent="Barn/SortsAndBack"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="SortLevel" parent="Barn/SortsAndBack"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="SortGender" parent="Barn/SortsAndBack"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Back" parent="Barn/SortsAndBack"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Dumpster" parent="." instance=ExtResource( 7 )]

editor/display_folded = true
visibility/visible = false

[node name="Back" parent="Dumpster/VBox"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Less" parent="Dumpster/Boxes/Catals/AmountChooser"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Less10" parent="Dumpster/Boxes/Catals/AmountChooser"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="More" parent="Dumpster/Boxes/Catals/AmountChooser"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="More10" parent="Dumpster/Boxes/Catals/AmountChooser"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Town" parent="." instance=ExtResource( 8 )]

editor/display_folded = true

[node name="Back" parent="Town/VBox"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Buy" parent="Town/MonsterShop"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Back" parent="Town/MonsterShop"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Back" parent="Town/CatalShop"]

params/resize_mode = 0
params/stretch_mode = 0

[node name="Arena" parent="." instance=ExtResource( 9 )]

editor/display_folded = true
visibility/visible = false

[node name="HUD" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Energy" type="ProgressBar" parent="HUD"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 934.0
margin/top = 7.0
margin/right = 1016.0
margin/bottom = 31.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="EnergyLabel" type="Label" parent="HUD/Energy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 80.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 10 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DateAndTime" type="Container" parent="HUD"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 570.0
margin/right = 50.0
margin/bottom = 584.0
__meta__ = {
"_edit_lock_": true
}

[node name="Date" type="Label" parent="HUD/DateAndTime"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 10 )
text = "Date X Time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time" type="Label" parent="HUD/DateAndTime"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 15.0
margin/right = 48.0
margin/bottom = 33.0
custom_fonts/font = ExtResource( 10 )
text = "00:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Quesha" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 72.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 10 )
text = "Quesha"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Farmer" parent="." instance=ExtResource( 11 )]

editor/display_folded = true
rect/scale = Vector2( 6, 6 )
margin/left = 430.0
margin/top = 466.0
margin/right = 470.0
margin/bottom = 506.0

[connection signal="pressed" from="Buttons/ToBreed" to="." method="_on_ToBreed_pressed"]

[connection signal="pressed" from="Buttons/ToSell" to="." method="_on_ToSell_pressed"]

[connection signal="pressed" from="Buttons/ToTown" to="." method="_on_ToTown_pressed"]

[connection signal="pressed" from="Buttons/ToArena" to="." method="_on_ToArena_pressed"]

[connection signal="pressed" from="Buttons/ToSleep" to="." method="_on_ToSleep_pressed"]


[editable path="Barn"]
[editable path="Dumpster"]
[editable path="Town"]
[editable path="Arena"]
[editable path="Farmer"]
